# RyukoBot

./: .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  nixpacks.toml  railway.json
docs/: arrays.md  borrowing.md  closures.md  condicionales.md  constantes.md  enums.md  for.md  funciones.md  generics.md  help.md  if_let.md  iterators.md  let_else.md  lifetimes.md  loop.md  macros.md  match.md  metodos.md  modulos.md  operadores.md  option.md  ownership.md  result.md  return.md  scopes.md  shadowing.md  slices.md  string.md  struct.md  tipos_de_datos.md  traits.md  tuplas.md  variables.md  vectores.md  while.md
src/: TODO.md  comandos.rs  commands.rs  info_consts.rs  main.rs
src/admin/: ban.rs  mod.rs  unban.rs
src/admin/ban/: ban.rs  mod.rs  unban.rs
src/audio/: join.rs  leave.rs  mod.rs  pause.rs  play.rs  resume.rs  skip.rs  stop.rs
src/fun/: action.rs  interact.rs  mod.rs
src/music_controller/: mod.rs  mute.rs  pause.rs  play.rs  queue.rs  random.rs  resume.rs  skip.rs  stop.rs  unmute.rs  utils.rs
src/utils/: autocomplete_arguments.rs  dependencies.rs  error.rs  mod.rs  music_utils.rs
