[package]
name = "ryuko_bot_discord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
shuttle-runtime = "0.16.0"
anyhow = "1.0.71"
poise = "0.5.5"
shuttle-poise = "0.16.0"
shuttle-secrets = "0.16.0"
tokio = "1.28.1"
tracing = "0.1.37"
songbird = { version = "0.3.2", features = ["yt-dlp", "builtin-queue", "driver"] }
shuttle-static-folder = "0.16.0"
chrono = "0.4.19"
serenity = { version = "0.11.5", default-features = false }
serde = "1.0.164"
serde_json = "1.0.99"
rand = "0.8.5"
reqwest = "0.11.18"
env_logger = "0.10.0"
dotenv = "0.15.0"