[package]
name = "ryuko_bot_discord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
shuttle-runtime = "0.21.0"
anyhow = "1.0.71"
poise = "0.5.5"
tokio = "1.28.1"
songbird = { version = "0.3.2", features = ["yt-dlp", "builtin-queue", "driver"] }
serenity = { version = "0.11.5", default-features = false }
serde = "1.0.164"
serde_json = "1.0.99"
rand = "0.8.5"
reqwest = "0.11.18"
env_logger = "0.10.0"
dotenv = "0.15.0"
nekosbest = "0.17.0"
chrono = "0.4.26"
log = "0.4.20"
log4rs = "1.2.0"
pretty_env_logger = "0.5.0"
axum = "0.6.20"

# sqlx = { version = "0.5.7", features = ["runtime-tokio-rustls", "sqlite", "offline"] }
# postgres = "0.19.5"
# sqlite = "0.31.0"
# mongodb = "2.6.0"
# diesel = "2.1.0"